# chaska_rover

./: .gitignore  README.md  workspace_status.md
src/chaska_arm_controller/: package.xml  setup.cfg  setup.py
src/chaska_arm_controller/chaska_arm_controller/: arm_kinematics.py  control_total.py  joint_velocity_node.py  joystick_controller_node.py  joystick_teleoperado.py  move_effector_esp32.py  move_nemas.py  move_rmd_motor.py  moveit.cpp  yolo_detector.py
src/chaska_arm_controller/launch/: joystick_control.launch.py  visualize.launch.py
src/chaska_arm_description/: package.xml  setup.cfg  setup.py
src/chaska_arm_description/config/: chaska_controllers.yaml
src/chaska_arm_description/launch/: display.launch.py  gazebo.launch.py  gazebo_rviz.launch.py
src/chaska_arm_description/meshes/: base.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_6.stl
src/chaska_arm_description/rviz/: chaska_arm.rviz
src/chaska_arm_description/urdf/: chaska_arm.urdf.xacro  chaska_arm_base.xacro  chaska_arm_gazebo.xacro  chaska_arm_ros2_control.xacro
src/chaska_bringup/: CMakeLists.txt  package.xml
src/chaska_bringup/config/: chaska_controllers.yaml
src/chaska_bringup/launch/: chaska_display.launch.py  chaska_simulation.launch.py
src/chaska_bringup/urdf/: chaska_robot.urdf.xacro
src/chaska_vision/: package.xml  setup.cfg  setup.py
src/chaska_vision/chaska_vision/: yolo_detector.py
src/chaska_vision/launch/: vision.launch.py
src/rover_bringup/: CMakeLists.txt  package.xml
src/rover_bringup/config/: ps5_teleop.yaml
src/rover_bringup/launch/: rover_bringup.launch.py  rover_simulation.launch.py  teleop.launch.py
src/rover_controller/: package.xml  setup.py
src/rover_controller/launch/: controller.launch.py
src/rover_controller/rover_controller/: joy_mode_switcher.py  swerve_node.py
src/rover_description/: CMakeLists.txt  package.xml
src/rover_description/config/: rover_controllers.yaml
src/rover_description/launch/: display.launch.py  gazebo.launch.py
src/rover_description/meshes/: base_link.stl  wheel.stl  wheel_support.stl  yaw.stl
src/rover_description/rviz/: display.rviz
src/rover_description/urdf/: rover.urdf.xacro  rover_base.xacro  rover_gazebo.xacro  rover_ros2_control.xacro
(+2 files in other folders)
