<?xml version="1.0"?>
<package format="3">
  <name>chaska_bringup</name>
  <version>0.1.0</version>
  <description>Launch unificado para el sistema completo Chaska (rover + brazo)</description>
  <maintainer email="gr@chaska.local">gr</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rover_description</exec_depend>
  <exec_depend>rover_controller</exec_depend>
  <exec_depend>chaska_arm_description</exec_depend>
  <exec_depend>chaska_arm_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
